--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio</title>
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;700&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/header-portfolio.css">
 </head>
 <body>
-    
+    <header class="header__portfolio">
+        <img class="header__logo" src="assets/img/logo-elton.svg" alt="Logo Elton Costa">
+        <nav class="header__nav">
+            <a class="header__link" href="#panel-projects">Projetos</a>
+        </nav>   
+    </header>
 </body>
 </html>
