Create section about

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/header-portfolio.css">
+    <link rel="stylesheet" href="css/section-about.css">
 </head>
 <body>
     <header class="header__portfolio">
@@ -19,5 +20,27 @@
             <a class="header__link" href="#panel-projects">Projetos</a>
         </nav>   
     </header>
+
+    <main>
+        <section id="panel-about" class="section__about container trace">
+            <h1 class="about__title"><b>UI/UX</b> Designer</h1>
+            
+            <p class="about__text text">Atualmente estudando interfaces e criando soluções centradas na experiência do usuário. Aprendendo: Design System, Design Thinking, Usabilidade e Metodologia Ágil com Scrum. Desenvolvendo minhas habilidades e competências em:</p>
+
+            <p class="about__text text"><b>Hard Skills:</b> Adobe XD, Figma, Illustrator, Photoshop, HTML, CSS e Bootstrap.</p>
+            <p class="about__text text"><b>Soft Skills:</b> Colaboração e Trabalho em Equipe, Comunicação, Empatia.</p>
+            <p class="about__text text">Em busca de uma oportunidade para meu desenvolvimento profissional, que permita-me aprofundar e melhorar minhas habilidades, como também explorar novas ferramentas.</p>
+
+            <a href="#" class="cta__button">Download CV</a>
+            <p class="about__text--info">Você também pode encontrar-me:</p>
+
+            <div class="social">
+                <ul class="about__social">
+                    <li><a class="about__midia" href="https://www.linkedin.com/in/elton-costa-a886b51b2/" target="_blank"><img src="assets/img/linkedin.svg" alt="Ícone do Linkedin"></a></li>
+                    <li><a class="about__midia" href="https://github.com/elton87" target="_blank"><img src="assets/img/github.svg" alt="Ícone do GitHub"></a></li>
+                </ul>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
