--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/header-portfolio.css">
     <link rel="stylesheet" href="css/section-about.css">
+    <link rel="stylesheet" href="css/section-project.css">
 </head>
 <body>
     <header class="header__portfolio">
@@ -28,8 +29,8 @@
             <p class="about__text text">Atualmente estudando interfaces e criando soluções centradas na experiência do usuário. Aprendendo: Design System, Design Thinking, Usabilidade e Metodologia Ágil com Scrum. Desenvolvendo minhas habilidades e competências em:</p>
 
             <p class="about__text text"><b>Hard Skills:</b> Adobe XD, Figma, Illustrator, Photoshop, HTML, CSS e Bootstrap.</p>
-            <p class="about__text text"><b>Soft Skills:</b> Colaboração e Trabalho em Equipe, Comunicação, Empatia.</p>
-            <p class="about__text text">Em busca de uma oportunidade para meu desenvolvimento profissional, que permita-me aprofundar e melhorar minhas habilidades, como também explorar novas ferramentas.</p>
+            <p class="about__text text"><b>Soft Skills:</b> Comunicação, Colaboração, Empatia e Trabalho em Equipe.</p>
+            <p class="about__text text">Estou em busca de uma oportunidade para meu desenvolvimento profissional, que permita-me aprofundar e melhorar minhas habilidades, como também explorar novas ferramentas.</p>
 
             <a href="#" class="cta__button">Download CV</a>
             <p class="about__text--info">Você também pode encontrar-me:</p>
@@ -41,6 +42,18 @@
                 </ul>
             </div>
         </section>
+
+        <section id="panel-projects" class="section__project container trace">
+            <h2 class="project__title title">Projetos</h2>
+
+
+            <figure>
+                <a  href="#" ><img src="assets/img/custom-novo.png" alt="Imagem do projeto em Adobe XD" class="project__image"></a>
+                <figcaption class="projects__text text">Luminária App,<a class="project__info" href="#">saiba mais!</a></figcaption>
+            </figure>
+                
+        </section>
+
     </main>
 </body>
 </html>
