--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/header-portfolio.css">
     <link rel="stylesheet" href="css/section-about.css">
     <link rel="stylesheet" href="css/section-project.css">
+    <link rel="stylesheet" href="css/footer.css">
 </head>
 <body>
     <header class="header__portfolio">
@@ -55,5 +56,13 @@
         </section>
 
     </main>
+
+    <footer class="footer">
+        <a href="#panel-about"><img class="footer__logo" src="assets/img/logo.svg" alt="Logo Elton Costa"></a>
+            
+        <a class="footer__link" href="#panel-about">Voltar ao topo</a>
+        
+    </footer>
+
 </body>
 </html>
