--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         <a class="footer__link" href="#panel-about">Voltar ao topo</a>
         
     </footer>
-
+    <script src="js/jquery.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
