Add download cv

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <p class="about__text text"><b>Soft Skills:</b> Comunicação, Colaboração, Empatia e Trabalho em Equipe.</p>
             <p class="about__text text">Estou em busca de uma oportunidade para meu desenvolvimento profissional, que permita-me aprofundar e melhorar minhas habilidades, como também explorar novas ferramentas.</p>
 
-            <a href="#" class="cta__button">Download CV</a>
+            <a href="download/design-cv-atual.pdf" target="_blank" class="cta__button">Download CV</a>
             <p class="about__text--info">Você também pode encontrar-me:</p>
 
             <div class="social">
