Refactoring index.html

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 
 
             <figure>
-                <a  href="#" ><img src="assets/img/custom-novo.png" alt="Imagem do projeto em Adobe XD" class="project__image"></a>
-                <figcaption class="projects__text text">Luminária App,<a class="project__info" href="#">saiba mais!</a></figcaption>
+                <a href="https://elton87.github.io/ui-luminaria/"><img src="assets/img/custom-novo.png" alt="Imagem do projeto em Adobe XD" class="project__image"></a>
+                <figcaption class="projects__text text">Luminária App,<a class="project__info" href="https://elton87.github.io/ui-luminaria/">saiba mais!</a></figcaption>
             </figure>
                 
         </section>
